// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ features / common / components / DevTools / DevToolsModal ] when \`DevToolsModal\` is mounted should render 1`] = `
<DocumentFragment>
  <div>
    <div
      class="modal"
    >
      
[Heading {"size":"xl"}]Dev tools[/Heading]
      <section
        class="section"
      >
        <h2
          class="section-title"
        >
          Pages
        </h2>
        <ul
          class="list"
        >
          <li>
            <a
              class="row"
              href="/planning"
            >
              
[Icon {"name":"tasks","color":"muted","size":"sm"} /]
              <span
                class="row-label"
              >
                Planning
              </span>
            </a>
          </li>
          <li>
            <a
              class="row"
              href="/focus-session"
            >
              
[Icon {"name":"clock","color":"muted","size":"sm"} /]
              <span
                class="row-label"
              >
                Focus session
              </span>
            </a>
          </li>
          <li>
            <a
              class="row"
              href="/retrospective"
            >
              
[Icon {"name":"reports","color":"muted","size":"sm"} /]
              <span
                class="row-label"
              >
                Retrospective
              </span>
            </a>
          </li>
        </ul>
      </section>
      <section
        class="section"
      >
        <h2
          class="section-title"
        >
          Session
        </h2>
        <ul
          class="list"
        >
          <li>
            <a
              class="row"
              href="/api/auth/login"
            >
              
[Icon {"name":"user","color":"muted","size":"sm"} /]
              <span
                class="row-label"
              >
                Log in
              </span>
            </a>
          </li>
          <li>
            <a
              class="row"
              href="/api/auth/logout"
            >
              
[Icon {"name":"arrowRight","color":"muted","size":"sm"} /]
              <span
                class="row-label"
              >
                Log out
              </span>
            </a>
          </li>
        </ul>
      </section>
      <section
        class="section"
      >
        <h2
          class="section-title"
        >
          Appearance
        </h2>
        <div
          class="list"
        >
          ToggleColorScheme
        </div>
      </section>
      <section
        class="section"
      >
        <h2
          class="section-title"
        >
          Environment
        </h2>
        <dl
          class="list environment"
        >
          <div
            class="environment-row"
          >
            <dt>
              Data source
            </dt>
            <dd>
              <code>
                json-server
              </code>
            </dd>
          </div>
          <div
            class="environment-row"
          >
            <dt>
              Demo mode
            </dt>
            <dd>
              <code>
                false
              </code>
            </dd>
          </div>
        </dl>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ features / common / components / DevTools / DevToolsModal ] when it is given a way to reset the data should render a reset button 1`] = `
<DocumentFragment>
  <div>
    <div
      class="modal"
    >
      
[Heading {"size":"xl"}]Dev tools[/Heading]
      <section
        class="section"
      >
        <h2
          class="section-title"
        >
          Pages
        </h2>
        <ul
          class="list"
        >
          <li>
            <a
              class="row"
              href="/planning"
            >
              
[Icon {"name":"tasks","color":"muted","size":"sm"} /]
              <span
                class="row-label"
              >
                Planning
              </span>
            </a>
          </li>
          <li>
            <a
              class="row"
              href="/focus-session"
            >
              
[Icon {"name":"clock","color":"muted","size":"sm"} /]
              <span
                class="row-label"
              >
                Focus session
              </span>
            </a>
          </li>
          <li>
            <a
              class="row"
              href="/retrospective"
            >
              
[Icon {"name":"reports","color":"muted","size":"sm"} /]
              <span
                class="row-label"
              >
                Retrospective
              </span>
            </a>
          </li>
        </ul>
      </section>
      <section
        class="section"
      >
        <h2
          class="section-title"
        >
          Session
        </h2>
        <ul
          class="list"
        >
          <li>
            <a
              class="row"
              href="/api/auth/login"
            >
              
[Icon {"name":"user","color":"muted","size":"sm"} /]
              <span
                class="row-label"
              >
                Log in
              </span>
            </a>
          </li>
          <li>
            <a
              class="row"
              href="/api/auth/logout"
            >
              
[Icon {"name":"arrowRight","color":"muted","size":"sm"} /]
              <span
                class="row-label"
              >
                Log out
              </span>
            </a>
          </li>
        </ul>
      </section>
      <section
        class="section"
      >
        <h2
          class="section-title"
        >
          Appearance
        </h2>
        <div
          class="list"
        >
          ToggleColorScheme
        </div>
      </section>
      <section
        class="section"
      >
        <h2
          class="section-title"
        >
          Environment
        </h2>
        <dl
          class="list environment"
        >
          <div
            class="environment-row"
          >
            <dt>
              Data source
            </dt>
            <dd>
              <code>
                local-storage
              </code>
            </dd>
          </div>
        </dl>
      </section>
      <section
        class="section"
      >
        <h2
          class="section-title"
        >
          Demo data
        </h2>
        <p
          class="description"
        >
          Lives in this browser and never expires. Resetting puts back the seed tasks and reloads Planning.
        </p>
        <button
          class="danger"
          type="button"
        >
          Reset demo data
        </button>
      </section>
    </div>
  </div>
</DocumentFragment>
`;
